--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="navbar-nav">
                     <a href="index.html" class="navbar-brand">My Portfolio</a>
                     <li class="nav-item">
-                        <a href="" class="nav-link">About the Author</a>
+                        <a href="#" class="nav-link">About the Author</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Contact</a>
@@ -24,7 +24,7 @@
         </header>
 
         <main></main>
-            
+
         <aside></aside>
 
         <footer></footer>
