adding bootstrap css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
             type="image/x-icon"
         />
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="bootstrap.min.css" />
         <link
             rel="stylesheet"
             href="node_modules/bootstrap/dist/css/bootstrap.min.css"
         />
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
 
     <body>
@@ -91,6 +93,7 @@
                 <h1>Hobbies</h1>
             </div>
             <div id="contact" class="hide">
+                <img src="https://scontent-den4-1.xx.fbcdn.net/v/t1.6435-9/122028627_10158031960602683_7816705550516900155_n.jpg?_nc_cat=111&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=oIH6HfpaBEwAX9fv17f&_nc_ht=scontent-den4-1.xx&oh=b4b57f6a8381c0c5c8b6bc5e921f94e2&oe=60CA071F" alt="Photo of Israel Silva">
                 <h1>Contact Me</h1>
                 <p>
                     Israel Silva <br>
