adding more experience

--- a/contact.html
+++ b/contact.html
@@ -26,22 +26,27 @@
             </ul>
         </nav>
     </header>
-    <main id="main">
-        <div id="hide" class="jumbotron text-center">
-            This portfolio is a work in progress. <br />
-            More content being added regularly! <br />
-            <div class="btn-link" onclick="hideJumbotron()">(Hide)</div>
+
+    <aside>
+        <div id="contact">
+            <div id="flex">
+                <img src="https://scontent-den4-1.xx.fbcdn.net/v/t1.6435-9/122028627_10158031960602683_7816705550516900155_n.jpg?_nc_cat=111&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=oIH6HfpaBEwAX9fv17f&_nc_ht=scontent-den4-1.xx&oh=b4b57f6a8381c0c5c8b6bc5e921f94e2&oe=60CA071F"
+                    alt="Photo of Israel Silva" />
+                <div>
+                    <h1>Contact Me</h1>
+                    <br />
+                    <p>
+                        &#128102; Israel Silva <br />
+                        &#128231; ei_rael@outlook.com <br />
+                        &#9742; (208) 419-7793 <br />
+                        &#127968; Rexburg, ID <br />
+                        <br />
+                        &#128667; (Willing to relocate)
+                    </p>
+                </div>
+            </div>
         </div>
-        <h1>Personal Projects</h1>
-        <ul>
-            <li><a href="#">Simple Website - HTML + CSS</a></li>
-            <li>
-                <a href="./wdd330/index.html">Exercises - JavaScript</a>
-            </li>
-            <li><a href="#">Content Management System - Angular</a></li>
-            <li><a href="#">Movie Database - Angular</a></li>
-        </ul>
-    </main>
+    </aside>
 
     <footer class="page-footer bg-dark fixed-bottom">
         <div class="footer-copyright text-center py-2">
