adding dry oar now

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
         </div>
         <h1>Personal Projects</h1>
         <ul>
-            <li><a href="#">Simple Website - HTML + CSS</a></li>
+            <li><a href="dry-oar/index.html">Dry Oar - HTML, CSS</a></li>
             <li>
                 <a href="./wdd330/index.html">Exercises - JavaScript</a>
             </li>
             <li><a href="#">Content Management System - Angular</a></li>
-            <li><a href="#">Movie Database - Angular</a></li>
+            <li><a href="cms-angular/index.html">Movie Database - Angular</a></li>
+            <li><a href="todo-react/index.html">Todo List - React</a></li>
         </ul>
     </main>
 
