--- a/cms-angular/index.html
+++ b/cms-angular/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <cms-root></cms-root>
-        <script src="./runtime.0e49e2b53282f40c8925.js" defer></script>
-        <script src="./polyfills.8c151b8375e767ff858f.js" defer></script>
-        <script src="./main.9f768e3a397e48f2f679.js" defer></script>
+        <script src="runtime.0e49e2b53282f40c8925.js" defer></script>
+        <script src="polyfills.8c151b8375e767ff858f.js" defer></script>
+        <script src="main.9f768e3a397e48f2f679.js" defer></script>
     </body>
 </html>
