--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             <li>
                 <a href="./wdd330/index.html">Exercises - JavaScript</a>
             </li>
-            <li><a href="#">Content Management System - Angular</a></li>
-            <li><a href="cms-angular/index.html">Movie Database - Angular</a></li>
-            <li><a href="todo-react/index.html">Todo List - React</a></li>
+            <li><a href="cms-angular/index.html">Content Management System - MEAN (MongoDB, Express, Angular, Node.JS)</a></li>
+            <li><a href="imdb-angular/index.html">Movie Database - Angular</a></li>
+            <li><span data-text="My first React project" class="tooltipp"><a href="todo-react/index.html">Todo List - React</a></span></li>
         </ul>
+        
     </main>
 
     <footer class="page-footer bg-dark fixed-bottom">
