--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </div>
         <h1>Personal Projects</h1>
         <ul>
-            <li><a href="dry-oar/index.html">Dry Oar - HTML, CSS</a></li>
+            <li><a href="./dry-oar/index.html">Dry Oar - HTML, CSS</a></li>
             <li>
                 <a href="./wdd330/index.html">Exercises - JavaScript</a>
             </li>
-            <li><a href="cms-angular/index.html">Content Management System - MEAN (MongoDB, Express, Angular, Node.JS)</a></li>
-            <li><a href="imdb-angular/index.html">Movie Database - Angular</a></li>
+            <li><a href="./cms-angular/index.html">Content Management System - MEAN (MongoDB, Express, Angular, Node.JS)</a></li>
+            <li><a href="./imdb-angular/index.html">Movie Database - Angular</a></li>
             <li><span data-text="My first React project" class="tooltipp"><a href="todo-react/index.html">Todo List - React</a></span></li>
         </ul>
         
