--- a/dry-oar/index.html
+++ b/dry-oar/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Dry Oar Boating | Home</title>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="./styles.css" />
     </head>
 
     <body>
